# BookStore

./: .gitignore  Dockerfile  Makefile  README.md  build_files.sh  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: github-actions-demo.yml  python-build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_serializers.py
order/tests/test_serializers/: test_order_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_category.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_product_serializers.py
product/tests/test_serializers/: test_category_serializers.py  test_product_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
